@@ -513,15 +513,22 @@ install?(:ext, :comm, :gem) do
     version = open(src) {|f| f.find {|s| /^\s*\w*VERSION\s*=(?!=)/ =~ s}} or next
     version = version.split(%r"=\s*", 2)[1].strip[/\A([\'\"])(.*?)\1/, 2]
     puts "#{" "*30}#{name} #{version}"
-    open_for_install(File.join(destdir, "#{name}.gemspec"), $data_mode) do
-      <<-GEMSPEC
+    gemspec = <<-GEMSPEC
 Gem::Specification.new do |s|
   s.name = #{name.dump}
   s.version = #{version.dump}
   s.summary = "This #{name} is bundled with Ruby"
 end
-      GEMSPEC
-    end
+    GEMSPEC
+    open_for_install(File.join(destdir, "#{name}-#{version}.gemspec"), $data_mode) { gemspec }
+    open_for_install(File.join(destdir, "#{name}.gemspec"), $data_mode) {
+      <<-WARNING + gemspec
+# #{name}.gemspec remains just for compatibility with installation
+# before Ruby 1.9.2-p32.
+# This file will no longer exist in Ruby 1.9.3.
+# Refer #{name}-#{version}.gemspec instead.
+      WARNING
+    }
   end
 end
 
